--- a/client/package.json
+++ b/client/package.json
@@ -10,15 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
+    "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
+    "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.22.3",
     "react-toastify": "^10.0.5",
+    "react-window": "^1.8.10",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0"
   },
